# controller_module

./: .gitignore  CMakeLists.txt  README.md  test.cpp
Datastruct/: Upper_Public.h
Mpc/Cpp/: CMakeLists.txt
Mpc/Cpp/config/: mpcInterfaceCfg.h
Mpc/Cpp/include/: model_fit.h  mpcCal.h  mpcMatrix.h  mpcMatrixSparse.h  osqpE_interface.h  osqp_interface.h  qpOASES_interface.h  quadprog_interface.h  tinyMpc_interface.h
Mpc/Cpp/include/OSQP/osqp/: osqp_configure.h
Mpc/Cpp/include/QuadProg/: Array.hh  QuadProg++.hh
Mpc/Cpp/include/TinyMPC/: types.hpp
Mpc/Cpp/include/block/: osqpE_interface.h
Mpc/Cpp/include/osqp100/osqp/: osqp.h  osqp_configure.h
Mpc/Cpp/include/osqp100Em/osqp/: osqp_configure.h
Mpc/Cpp/include/qpOASES/: Types.hpp
Mpc/Cpp/libs/OsqpEigen/: OsqpEigen.lib  OsqpEigend.lib  osqp.lib  qdldl.lib
Mpc/Cpp/libs/OsqpEigen/cmake/OsqpEigen/: OsqpEigenConfig.cmake
Mpc/Cpp/libs/OsqpEigen063/cmake/OsqpEigen/: OsqpEigenTargets.cmake
Mpc/Cpp/libs/OsqpEigen100/: OsqpEigen.lib
Mpc/Cpp/libs/OsqpEigen100/cmake/OsqpEigen/: OsqpEigenTargets-release.cmake  OsqpEigenTargets.cmake
Mpc/Cpp/libs/osqp/: osqpstatic.lib
Mpc/Cpp/libs/osqp063/cmake/osqp/: osqp-targets-release.cmake
Mpc/Cpp/libs/osqp100/: osqp.lib  osqpstatic.lib
Mpc/Cpp/libs/osqp100/cmake/osqp/: osqp-targets-release.cmake  osqp-targets.cmake
Mpc/Cpp/libs/osqp100Em/: osqpstatic.lib
Mpc/Cpp/libs/osqp100Em/cmake/osqp/: osqpstatic-targets.cmake
Mpc/Cpp/source/: mpcCal.cpp  mpcMatrix.cpp  mpcMatrixSparse.cpp  osqpE_interface.cpp  osqp_interface.cpp  qpOASES_interface.cpp  quadprog_interface.cpp  tinyMpc_interface.cpp
Mpc/Cpp/source/QuadProg/: QuadProg++.cc
Mpc/Cpp/source/TinyMPC/: admm.cpp  tiny_api.cpp
Mpc/Cpp/source/block/: osqpE_interface.cpp
Pid/Cpp/: CMakeLists.txt
Pid/Cpp/include/: PIDmethod.h
Pid/Cpp/source/: PIDmethod.cpp
buildl/: CMakeCache.txt  Makefile  Testfile  cmake_install.cmake
buildl/Mpc/Cpp/: Makefile  cmake_install.cmake
buildw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Test.sln  Testfile.vcxproj  Testfile.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildw/Mpc/Cpp/: MpcCpp.vcxproj  MpcCpp.vcxproj.filters  cmake_install.cmake
buildw/Mpc/Cpp/MpcCpp.dir/Release/: MpcCpp.lib.recipe
buildw/Mpc/Cpp/MpcCpp.dir/Release/MpcCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+8 more)
buildw/Mpc/Cpp/Release/: MpcCpp.lib
buildw/Testfile.dir/Release/: Testfile.exe.recipe
buildw/Testfile.dir/Release/Testfile.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Testfile.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
buildw/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
buildw/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildw/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
